fix alert z-index to the very top

--- a/github-finder/src/index.css
+++ b/github-finder/src/index.css
@@ -109,6 +109,7 @@
 .alert {
 	transform: scale(0);
 	transform-origin: top;
+	z-index: 99999;
 }
 
 .alert.animate {
